# causal-sentinel-protocol

./: .env.example  .gitignore  .replit  Cargo.toml  DEPLOY.md  Makefile  README.md  SUBMISSION.md  TEST_REPORT.md  docker-compose.yml  replit.md
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  csp-import-setup.md  nixos-rust-wasm-toolchain-gap.md
.github/workflows/: ci.yml  deploy-contracts.yml
agent-core/python/anima_crawler/src/: __init__.py  main.py
agent-core/python/coherence_engine/: pyproject.toml
agent-core/python/coherence_engine/src/: __init__.py  consensus_plane.py  inferential_plane.py  main.py  moat.py  perceptual_plane.py  self_reflection_plane.py  silence_emitter.py  world_model_plane.py
agent-core/python/faiss_memory/src/: __init__.py  main.py
agent-core/rust/crispr_defense/: Cargo.toml
agent-core/rust/crispr_defense/src/: lib.rs
agent-core/rust/l0_daemon/: Cargo.toml
agent-core/rust/l0_daemon/src/: behavioral_hasher.rs  casper_stream.rs  config.rs  main.rs  websocket_server.rs
agent-economy/federation_protocol/: Cargo.toml
agent-economy/federation_protocol/src/: main.rs
agent-economy/mcp_server/: Cargo.toml
agent-economy/mcp_server/src/: main.rs
agent-economy/x402_facilitator/: Cargo.toml
agent-economy/x402_facilitator/src/: main.rs
api/: main.py  requirements.txt
attached_assets/: Causal_Sentinel_Protocol_Proposal_1783214067332.md  Pasted-I-ll-build-the-complete-Causal-Sentinel-Protocol-implem_1783214130642.txt
circuits/behavioral_integrity/: Nargo.toml
circuits/behavioral_integrity/src/: main.nr
circuits/causal_identity/: Nargo.toml
circuits/causal_identity/src/: main.nr
circuits/sentinel_compliance/: Nargo.toml
circuits/sentinel_compliance/src/: main.nr
config/: mainnet_addresses.json  testnet_addresses.json
contracts/: Cargo.toml
contracts/compliance_engine/: Cargo.toml
contracts/compliance_engine/src/: lib.rs
contracts/epistatic_controller/: Cargo.toml
contracts/epistatic_controller/src/: lib.rs
contracts/sentinel_learner/: Cargo.toml
contracts/sentinel_learner/src/: lib.rs
contracts/sentinel_registry/: Cargo.toml
contracts/sentinel_registry/src/: lib.rs
contracts/sentinel_vault/: Cargo.toml
contracts/sentinel_vault/src/: lib.rs
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  CIRCUITS.md  GITHUB_ACTIONS.md
frontend/dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/dashboard/src/: App.tsx  index.css
frontend/dashboard/src/components/: Layout.tsx
frontend/dashboard/src/hooks/: useWebSocket.ts
frontend/dashboard/src/pages/: AgentExplorer.tsx  Contracts.tsx  Dashboard.tsx  SilenceLog.tsx  ZKWizard.tsx
frontend/dashboard/src/store/: index.ts
frontend/dashboard/src/types/: index.ts
scripts/: bootstrap.sh  compile_circuits.sh  deploy_testnet.sh  init_db.sql  setup_key.sh  start_all.sh  verify_deployment.py
sdk/python/: csp_sdk.py
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: index.ts
tests/: Cargo.toml
tests/src/: circuit_tests.rs  coherence_tests.rs  contract_tests.rs  main.rs
