[workspace]
members = [
    "agent-core/rust/l0_daemon",
    "agent-core/rust/crispr_defense",
    "agent-economy/x402_facilitator",
    "agent-economy/mcp_server",
    "agent-economy/federation_protocol",
    "tests",
]
resolver = "2"

# Contracts (contracts/*) require the Casper/Odra build environment.
# Build them with: cargo build --release --target wasm32-unknown-unknown
# inside the contracts/ directory.  They are NOT part of this workspace.

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Causal Sentinel Team <team@causalsentinel.io>"]
license = "CC0-1.0"
repository = "https://github.com/causal-sentinel/causal-sentinel-protocol"
rust-version = "1.75"

[workspace.dependencies]
serde             = { version = "1.0",  features = ["derive"] }
serde_json        = "1.0"
tokio             = { version = "1.35", features = ["full"] }
axum              = "0.7"
# Use rustls to avoid needing system OpenSSL / pkg-config
reqwest           = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
sha3              = "0.10"
hex               = "0.4"
thiserror         = "1.0"
anyhow            = "1.0"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
chrono            = "0.4"
