[workspace]
members = [
    "sentinel_registry",
    "sentinel_vault",
    "compliance_engine",
    "epistatic_controller",
    "sentinel_learner",
    "zk_verifier",
]
resolver = "2"

# ─── Build instructions ────────────────────────────────────────────────────────
#
# Contracts target wasm32-unknown-unknown via the Odra framework.
# The standard pnpm workspace does NOT include this directory.
#
# Prerequisites:
#   rustup target add wasm32-unknown-unknown
#   cargo install odra-cli   # or follow https://odra.dev/docs/getting-started
#
# Build all:
#   cargo build --release --target wasm32-unknown-unknown
#
# Deploy to Casper testnet:
#   make deploy-testnet  (see Makefile in project root)

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Causal Sentinel Team <team@causalsentinel.io>"]
license = "CC0-1.0"

[workspace.dependencies]
odra        = { version = "1.0.0", features = ["casper"] }
odra-casper = { version = "1.0.0" }
