[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

[dependencies]
tokio    = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
reqwest  = { workspace = true }
anyhow   = { workspace = true }
sha3     = { workspace = true }
hex      = { workspace = true }
tracing  = { workspace = true }

[[bin]]
name = "integration-tests"
path = "src/main.rs"
