[package]
name = "federation_protocol"
version.workspace = true
edition.workspace = true

[dependencies]
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
axum               = { workspace = true }
reqwest            = { workspace = true }
sha3               = { workspace = true }
hex                = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
