[package]
name = "l0_daemon"
version.workspace = true
edition.workspace = true

[dependencies]
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
reqwest            = { workspace = true }
sha3               = { workspace = true }
hex                = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
chrono             = { workspace = true }
clap               = { version = "4.5", features = ["derive"] }
toml               = "0.8"
# Use rustls-tls-webpki-roots to avoid native OpenSSL
tokio-tungstenite  = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots"] }
futures-util       = "0.3"
axum               = { workspace = true, features = ["ws"] }

[dev-dependencies]
tokio-test = "0.4"
